--- a/index.html
+++ b/index.html
@@ -134,6 +134,22 @@
                     Displays MIDI input from an instrument as a piano roll using the WebMIDI API.
                 </p>
             </section>
+
+            <section>
+                <h2>Instrument Note Ranges</h2>
+                <p>
+                    <a href='https://github.com/fheyen/instrument-note-ranges'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                    <a href='https://fheyen.github.io/instrument-note-ranges'>
+                        <i class="fas fa-play"></i>demo
+                    </a>
+                </p>
+                <p>
+                    A visualization of the range of notes different kinds of instruments are able to produce.
+                </p>
+                <img src="./files/projects/instrument-note-ranges.png" width="100%">
+            </section>
         </article>
 
     </main>
