--- a/index.html
+++ b/index.html
@@ -12,28 +12,49 @@
 </head>
 
 <body>
+    <a name="top"></a>
     <main>
         <div>
             <header>
-                <h1>fheyen<br />&nbsp;&nbsp;.github<br />&nbsp;&nbsp;.io<span style="color:var(--linkColor)">(<span
-                            style="color:#888">...</span>)</span></h1>
-                <nav>
-                    <ul>
-                        <li>
-                            <a href="#publications">publications</a>
-                        </li>
-                        <li>
-                            <a href="#projects">projects</a>
-                        </li>
-                    </ul>
-                </nav>
+                <div>
+                    <h1 class="h1desktop">
+                        <div>
+                            fheyen
+                        </div>
+                        <div class="titleIndented">
+                            .github
+                        </div>
+                        <div class="titleIndented">
+                            .io<span style="color:var(--linkColor)">(<span style="color:#888">...</span>)</span>
+                        </div>
+                    </h1>
+                    <h1 class="h1mobile">
+                        fheyen.github.io
+                    </h1>
+                </div>
+                <div>
+                    <nav>
+                        <ul>
+                            <li>
+                                <a href="#publications">publications</a>
+                            </li>
+                            <li>
+                                <a href="#projects">projects</a>
+                            </li>
+                            <li>
+                                <a href="#top" title="Back to top"><i class="fas fa-chevron-circle-up"></i></a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </header>
         </div>
 
         <article>
             <section class="heading">
+                <a name="publications"></a>
                 <h1>
-                    <a name="publications"></a> Publications
+                    Publications
                 </h1>
             </section>
 
@@ -62,7 +83,9 @@
                     demonstrate the effectivity of our approach in multiple case studies for training classification
                     models in the domain of natural language processing.
                 </p>
-                <img src="./files/avi_2020_clavis/clavis.png" width="100%">
+                <a href='https://dl.acm.org/doi/10.1145/3399715.3399814'>
+                    <img src="./files/avi_2020_clavis/clavis.png" width="100%">
+                </a>
             </section>
 
             <section class="span2">
@@ -74,7 +97,7 @@
                 <p>
                     <a
                         href='https://vis2020-ieee.ipostersessions.com/default.aspx?s=82-F0-FF-F9-29-B9-B4-7F-FE-F3-A9-1D-4A-B7-4F-32'>
-                        <i class="far fa-file"></i>poster
+                        <i class="far fa-newspaper"></i>poster
                     </a>
                     <a href='./files/ieee_vis_2020_poster/IEEE_VIS_Heyen_2020_Supporting.pdf'>
                         <i class="far fa-file"></i>paper
@@ -89,7 +112,10 @@
                     and stylistic variance. Our current approach focuses on rhythm and
                     uses MIDI data for simplicity.
                 </p>
-                <img src="./files/ieee_vis_2020_poster/poster_screenshot_small.png" width="100%">
+                <a
+                    href='https://vis2020-ieee.ipostersessions.com/default.aspx?s=82-F0-FF-F9-29-B9-B4-7F-FE-F3-A9-1D-4A-B7-4F-32'>
+                    <img src="./files/ieee_vis_2020_poster/poster_screenshot_small.png" width="100%">
+                </a>
             </section>
 
             <section class="span2">
@@ -99,35 +125,38 @@
             </section>
 
             <section class="heading">
+                <a name="projects"></a>
                 <h1>
-                    <a name="projects"></a> Projects
+                    Projects
                 </h1>
             </section>
 
             <section>
                 <h2>MIDI Piano Roll</h2>
                 <p>
-                    <a href='https://github.com/fheyen/midi-pianoroll'>
-                        <i class="fab fa-github"></i>code
-                    </a>
                     <a href='https://fheyen.github.io/midi-pianoroll'>
                         <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/midi-pianoroll'>
+                        <i class="fab fa-github"></i>code
                     </a>
                 </p>
                 <p>
                     Displays a MIDI file as a piano roll visualization in the browser.
                 </p>
-                <img src="./files/projects/midi-pianoroll_small.png" width="100%">
+                <a href='https://fheyen.github.io/midi-pianoroll'>
+                    <img src="./files/projects/midi-pianoroll_small.png" width="100%">
+                </a>
             </section>
 
             <section>
                 <h2>MIDI Live Vis</h2>
                 <p>
-                    <a href='https://github.com/fheyen/midi-live-vis'>
-                        <i class="fab fa-github"></i>code
-                    </a>
                     <a href='https://fheyen.github.io/midi-live-vis'>
                         <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/midi-live-vis'>
+                        <i class="fab fa-github"></i>code
                     </a>
                 </p>
                 <p>
@@ -138,17 +167,19 @@
             <section>
                 <h2>Instrument Note Ranges</h2>
                 <p>
-                    <a href='https://github.com/fheyen/instrument-note-ranges'>
-                        <i class="fab fa-github"></i>code
-                    </a>
                     <a href='https://fheyen.github.io/instrument-note-ranges'>
                         <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/instrument-note-ranges'>
+                        <i class="fab fa-github"></i>code
                     </a>
                 </p>
                 <p>
                     A visualization of the range of notes different kinds of instruments are able to produce.
                 </p>
-                <img src="./files/projects/instrument-note-ranges.png" width="100%">
+                <a href='https://fheyen.github.io/instrument-note-ranges'>
+                    <img src="./files/projects/instrument-note-ranges.png" width="100%">
+                </a>
             </section>
         </article>
 
