--- a/index.html
+++ b/index.html
@@ -181,6 +181,24 @@
                     <img src="./files/projects/instrument-note-ranges.png" width="100%">
                 </a>
             </section>
+
+            <section>
+                <h2>MIDI Chords</h2>
+                <p>
+                    <a href='https://fheyen.github.io/midi-chords'>
+                        <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/midi-chords'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                </p>
+                <p>
+                    Tells you what chord you are playing via WebMIDI.
+                </p>
+                <a href='https://fheyen.github.io/midi-chords'>
+                    <img src="./files/projects/midi-chords.png" width="100%">
+                </a>
+            </section>
         </article>
 
     </main>
