fixed small issues with the mobile layout

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <article>
             <section class="heading">
-                <a name="publications"></a>
+                <a class="anchor" name="publications"></a>
                 <h1>
                     Publications
                 </h1>
@@ -125,7 +125,7 @@
             </section>
 
             <section class="heading">
-                <a name="projects"></a>
+                <a class="anchor" name="projects"></a>
                 <h1>
                     Projects
                 </h1>
