--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <a name="top"></a>
+    <a class="anchor" name="top"></a>
     <main>
         <div>
             <header>
@@ -119,7 +119,7 @@
             </section>
 
             <section class="span2">
-                <p>
+                <p style="text-align: center;">
                     More to come!
                 </p>
             </section>
