added musicvis-lib and clavis pdf

--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
                     Sedlmair
                 </p>
                 <p>
+                    <a
+                        href='https://www.vis.uni-stuttgart.de/pumaApi/v1/pages/85bab2ac-cc7e-11e8-806c-000e0c3db68b/publicationLists/8a54995a-d37e-11e8-8d6c-000e0c3db68b/publications/746c5421c7fdafa382be4df6a1b44150/documents/Heyen+-+ClaVis+(2020).pdf'>
+                        <i class="far fa-file-pdf"></i>PDF
+                    </a>
                     <a href='https://dl.acm.org/doi/10.1145/3399715.3399814'>
-                        <i class="far fa-file"></i>paper
+                        <i class="far fa-newspaper"></i>ACM
                     </a>
                     <a href='https://github.com/fheyen/ClaVis'>
                         <i class="fab fa-github"></i>code & more
@@ -100,7 +104,7 @@
                         <i class="far fa-newspaper"></i>poster
                     </a>
                     <a href='./files/ieee_vis_2020_poster/IEEE_VIS_Heyen_2020_Supporting.pdf'>
-                        <i class="far fa-file"></i>paper
+                        <i class="far fa-file-pdf"></i>paper PDF
                     </a>
                 </p>
                 <p>
@@ -198,6 +202,21 @@
                 <a href='https://fheyen.github.io/midi-chords'>
                     <img src="./files/projects/midi-chords.png" width="100%">
                 </a>
+            </section>
+
+            <section>
+                <h2>musicvis-lib</h2>
+                <p>
+                    <a href='https://www.npmjs.com/package/musicvis-lib'>
+                        <i class="fab fa-npm"></i>npm
+                    </a>
+                    <a href='https://github.com/fheyen/musicvis-lib'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                </p>
+                <p>
+                    Library for web-based music visualization.
+                </p>
             </section>
         </article>
 
