added random snowflakes project

--- a/index.html
+++ b/index.html
@@ -218,6 +218,24 @@
                     Library for web-based music visualization.
                 </p>
             </section>
+
+            <section>
+                <h2>Randomized Snowflakes</h2>
+                <p>
+                    <a href='https://fheyen.github.io/snowflake/'>
+                        <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/snowflake'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                </p>
+                <p>
+                    Snowflakes generated at random using hexagons.
+                </p>
+                <a href='https://fheyen.github.io/snowflake/'>
+                    <img src="./files/projects/snowflake.png" width="100%">
+                </a>
+            </section>
         </article>
 
     </main>
