added jsgames to projects

--- a/index.html
+++ b/index.html
@@ -154,21 +154,6 @@
             </section>
 
             <section>
-                <h2>MIDI Live Vis</h2>
-                <p>
-                    <a href='https://fheyen.github.io/midi-live-vis'>
-                        <i class="fas fa-play"></i>demo
-                    </a>
-                    <a href='https://github.com/fheyen/midi-live-vis'>
-                        <i class="fab fa-github"></i>code
-                    </a>
-                </p>
-                <p>
-                    Displays MIDI input from an instrument as a piano roll using the WebMIDI API.
-                </p>
-            </section>
-
-            <section>
                 <h2>Instrument Note Ranges</h2>
                 <p>
                     <a href='https://fheyen.github.io/instrument-note-ranges'>
@@ -184,6 +169,21 @@
                 <a href='https://fheyen.github.io/instrument-note-ranges'>
                     <img src="./files/projects/instrument-note-ranges.png" width="100%">
                 </a>
+            </section>
+
+            <section>
+                <h2>MIDI Live Vis</h2>
+                <p>
+                    <a href='https://fheyen.github.io/midi-live-vis'>
+                        <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/midi-live-vis'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                </p>
+                <p>
+                    Displays MIDI input from an instrument as a piano roll using the WebMIDI API.
+                </p>
             </section>
 
             <section>
@@ -205,21 +205,6 @@
             </section>
 
             <section>
-                <h2>musicvis-lib</h2>
-                <p>
-                    <a href='https://www.npmjs.com/package/musicvis-lib'>
-                        <i class="fab fa-npm"></i>npm
-                    </a>
-                    <a href='https://github.com/fheyen/musicvis-lib'>
-                        <i class="fab fa-github"></i>code
-                    </a>
-                </p>
-                <p>
-                    Library for web-based music visualization.
-                </p>
-            </section>
-
-            <section>
                 <h2>Randomized Snowflakes</h2>
                 <p>
                     <a href='https://fheyen.github.io/snowflake/'>
@@ -235,6 +220,39 @@
                 <a href='https://fheyen.github.io/snowflake/'>
                     <img src="./files/projects/snowflake.png" width="100%">
                 </a>
+            </section>
+
+            <section>
+                <h2>Games</h2>
+                <p>
+                    <a href='https://fheyen.github.io/jsGames/'>
+                        <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/jsGames'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                </p>
+                <p>
+                    Some classic games written in TypeScript.
+                </p>
+                <a href='https://fheyen.github.io/jsGames/'>
+                    <img src="./files/projects/jsgames_small.png" width="100%">
+                </a>
+            </section>
+
+            <section>
+                <h2>musicvis-lib</h2>
+                <p>
+                    <a href='https://www.npmjs.com/package/musicvis-lib'>
+                        <i class="fab fa-npm"></i>npm
+                    </a>
+                    <a href='https://github.com/fheyen/musicvis-lib'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                </p>
+                <p>
+                    Library for web-based music visualization.
+                </p>
             </section>
         </article>
 
