added kalimba tabs

--- a/index.html
+++ b/index.html
@@ -254,6 +254,24 @@
                     Library for web-based music visualization.
                 </p>
             </section>
+
+            <section>
+                <h2>Kalimba Tabs</h2>
+                <p>
+                    <a href='https://fheyen.github.io/kalimba/'>
+                        <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/kalimba'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                </p>
+                <p>
+                    Colorful kalimba tabs from text or MIDI, notes can be played and visualized with different tempi.
+                </p>
+                <a href='https://fheyen.github.io/kalimba/'>
+                    <img src="./files/projects/kalimba.png" width="100%">
+                </a>
+            </section>
         </article>
 
     </main>
