added mandala and musicvis-lib docs

--- a/index.html
+++ b/index.html
@@ -215,10 +215,28 @@
                     </a>
                 </p>
                 <p>
-                    Snowflakes generated at random using hexagons.
+                    Snowflakes generated at random using hexagons. Comes with animated drawing!
                 </p>
                 <a href='https://fheyen.github.io/snowflake/'>
                     <img src="./files/projects/snowflake.png" width="100%">
+                </a>
+            </section>
+
+            <section>
+                <h2>Mandala</h2>
+                <p>
+                    <a href='https://fheyen.github.io/mandala/'>
+                        <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/mandala'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                </p>
+                <p>
+                    Mandala drawing tool using symmetry along an adjustable number of axes.
+                </p>
+                <a href='https://fheyen.github.io/mandala/'>
+                    <img src="./files/projects/mandala1_small.png" width="100%">
                 </a>
             </section>
 
@@ -248,6 +266,9 @@
                     </a>
                     <a href='https://github.com/fheyen/musicvis-lib'>
                         <i class="fab fa-github"></i>code
+                    </a>
+                    <a href='https://fheyen.github.io/musicvis-lib/'>
+                        <i class="fa fa-book"></i>docs
                     </a>
                 </p>
                 <p>
