--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
                             </li>
                             <li>
                                 <a href="#projects">projects</a>
+                                <ul>
+                                    <li>
+                                        <a href="#projects-music">music</a>
+                                    </li>
+                                    <li>
+                                        <a href="#projects-misc">misc</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li>
                                 <a href="#top" title="Back to top"><i class="fas fa-chevron-circle-up"></i></a>
@@ -128,11 +136,20 @@
                 </p>
             </section>
 
+
             <section class="heading">
                 <a class="anchor" name="projects"></a>
                 <h1>
                     Projects
                 </h1>
+            </section>
+
+
+            <section class="heading">
+                <a class="anchor" name="projects-music"></a>
+                <h2>
+                    Music-Related
+                </h2>
             </section>
 
             <section>
@@ -187,6 +204,61 @@
             </section>
 
             <section>
+                <h2>musicvis-lib</h2>
+                <p>
+                    <a href='https://www.npmjs.com/package/musicvis-lib'>
+                        <i class="fab fa-npm"></i>npm
+                    </a>
+                    <a href='https://github.com/fheyen/musicvis-lib'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                    <a href='https://fheyen.github.io/musicvis-lib/'>
+                        <i class="fa fa-book"></i>docs
+                    </a>
+                </p>
+                <p>
+                    Library for web-based music visualization.
+                </p>
+            </section>
+
+            <section>
+                <h2>Music Exercise Generator</h2>
+                <p>
+                    <a href='https://fheyen.github.io/music-exercise-generator/'>
+                        <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/music-exercise-generator'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                </p>
+                <p>
+                    Generates music instrument exercises such as scales at adjustable tempi and outputs them as MusicXML
+                    files.
+                </p>
+                <a href='https://fheyen.github.io/music-exercise-generator/'>
+                    <img src="./files/projects/music-exercise-generator_small.png" width="100%">
+                </a>
+            </section>
+
+            <section>
+                <h2>Kalimba Tabs</h2>
+                <p>
+                    <a href='https://fheyen.github.io/kalimba/'>
+                        <i class="fas fa-play"></i>demo
+                    </a>
+                    <a href='https://github.com/fheyen/kalimba'>
+                        <i class="fab fa-github"></i>code
+                    </a>
+                </p>
+                <p>
+                    Colorful kalimba tabs from text or MIDI, notes can be played and visualized with different tempi.
+                </p>
+                <a href='https://fheyen.github.io/kalimba/'>
+                    <img src="./files/projects/kalimba.png" width="100%">
+                </a>
+            </section>
+
+            <section>
                 <h2>MIDI Chords</h2>
                 <p>
                     <a href='https://fheyen.github.io/midi-chords'>
@@ -202,6 +274,14 @@
                 <a href='https://fheyen.github.io/midi-chords'>
                     <img src="./files/projects/midi-chords.png" width="100%">
                 </a>
+            </section>
+
+
+            <section class="heading">
+                <a class="anchor" name="projects-misc"></a>
+                <h2>
+                    Misc
+                </h2>
             </section>
 
             <section>
@@ -258,40 +338,19 @@
                 </a>
             </section>
 
-            <section>
-                <h2>musicvis-lib</h2>
+            <section class="heading">
+                <h2>You reached rock bottom</h2>
                 <p>
-                    <a href='https://www.npmjs.com/package/musicvis-lib'>
-                        <i class="fab fa-npm"></i>npm
-                    </a>
-                    <a href='https://github.com/fheyen/musicvis-lib'>
-                        <i class="fab fa-github"></i>code
-                    </a>
-                    <a href='https://fheyen.github.io/musicvis-lib/'>
-                        <i class="fa fa-book"></i>docs
-                    </a>
+                    Hand-made website. Made without any framework, JavaScript, Bootstrap, ... just plain HTML, CSS, and
+                    a
+                    pinch
+                    of <a href="https://fontawesome.com/">FontAwesome</a>. <a
+                        href="https://github.com/fheyen/fheyen.github.io">Open source</a>. No ads, no tracking, no
+                    cookies ; )
                 </p>
                 <p>
-                    Library for web-based music visualization.
+                    <a href="#top"><i class="fas fa-chevron-circle-up"></i> take me to the top!</a>
                 </p>
-            </section>
-
-            <section>
-                <h2>Kalimba Tabs</h2>
-                <p>
-                    <a href='https://fheyen.github.io/kalimba/'>
-                        <i class="fas fa-play"></i>demo
-                    </a>
-                    <a href='https://github.com/fheyen/kalimba'>
-                        <i class="fab fa-github"></i>code
-                    </a>
-                </p>
-                <p>
-                    Colorful kalimba tabs from text or MIDI, notes can be played and visualized with different tempi.
-                </p>
-                <a href='https://fheyen.github.io/kalimba/'>
-                    <img src="./files/projects/kalimba.png" width="100%">
-                </a>
             </section>
         </article>
 
