added barchart clock

--- a/index.html
+++ b/index.html
@@ -321,6 +321,21 @@
             </section>
 
             <section>
+                <h2>BarChart Clock</h2>
+                <p>
+                    <a href='https://observablehq.com/@fheyen/barchart-clock'>
+                        <i class="fas fa-play"></i>demo & code
+                    </a>
+                </p>
+                <p>
+                    A linear clock as an alternative to the usual angular visual encoding.
+                </p>
+                <a href='https://observablehq.com/@fheyen/barchart-clock'>
+                    <img src="./files/projects/barchartclock.png" width="100%">
+                </a>
+            </section>
+
+            <section>
                 <h2>Games</h2>
                 <p>
                     <a href='https://fheyen.github.io/jsGames/'>
@@ -340,14 +355,6 @@
 
             <section class="heading">
                 <h2>You reached rock bottom</h2>
-                <p>
-                    Hand-made website. Made without any framework, JavaScript, Bootstrap, ... just plain HTML, CSS, and
-                    a
-                    pinch
-                    of <a href="https://fontawesome.com/">FontAwesome</a>. <a
-                        href="https://github.com/fheyen/fheyen.github.io">Open source</a>. No ads, no tracking, no
-                    cookies ; )
-                </p>
                 <p>
                     <a href="#top"><i class="fas fa-chevron-circle-up"></i> take me to the top!</a>
                 </p>
