--- a/index.html
+++ b/index.html
@@ -62,6 +62,32 @@
             <section class="heading">
                 <a class="anchor" name="publications"></a>
                 <h1>
+                    About Me
+                </h1>
+            </section>
+
+            <section class="span2">
+                <p>
+                    I'm a PhD candidate at the University of Stuttgart, Germany, whithin the awesome <a
+                        href="https://visvar.github.io/">VISVAR</a> research group.
+                </p>
+                <p>
+                    My thesis revolves around supporting
+                    people who want to learn a musical instrument, by giving them visual insight into what they play.
+                    <a href="#drumvisposter">My VIS'20 poster</a> explains the idea in more detail.
+                </p>
+                <p>
+                    This website shows off some of the stuff I did for work, research, and fun (they overlap sometimes).
+                    See also <a href="https://observablehq.com/@fheyen?direction=desc&sort=likes&tab=notebooks">my
+                        Observable page</a>, where smaller projects live. I'm a strong believer in open science, open
+                    source, and web technoloqy, feel free to re-use anything as long as you cite and/or link the
+                    original :).
+                </p>
+            </section>
+
+            <section class="heading">
+                <a class="anchor" name="publications"></a>
+                <h1>
                     Publications
                 </h1>
             </section>
@@ -101,6 +127,7 @@
             </section>
 
             <section class="span2">
+                <a class="anchor" name="drumvisposter"></a>
                 <h2>Supporting Music Education through Visualizations of MIDI Recordings</h2>
                 <p class="authors">
                     <span class="issue">IEEE VIS 2020 </span>
